2011-06-09 Sarka Todorova <sarka.todorova@cern.ch>
	* fix memory leak
	* tagged as MuonTrackingGeometry-00-05-39

2011-05-13 Susumu Oda <Susumu.Oda@cern.ch>
	* suppress info messages on TGC strip plane shifts (bug #81921)
	* tagged as MuonTrackingGeometry-00-05-38 

2011-05-06 Sarka Todorova <sarka.todorova@cern.ch>
	* suppress error messages in TGC identification ( temporary )
	* tagged as MuonTrackingGeometry-00-05-37

2011-04-29 Sarka Todorova <sarka.todorova@cern.ch>
	* clear TGC cache to get rid of surfaces with invalid id
	* tagged as MuonTrackingGeometry-00-05-36

2011-04-29 Sarka Todorova <sarka.todorova@cern.ch>
	* error message in case invalid TGC channel is accessed
	* tagged as MuonTrackingGeometry-00-05-35

2011-04-19 Sarka Todorova <sarka.todorova@cern.ch>
	* cleaning MsgSvc->ATH_MSG ( AlgTool->AthAlgTool )
	* tagged as MuonTrackingGeometry-00-05-34

2011-03-01 Sarka Todorova <sarka.todorova@cern.ch>
	* Scott Snyder's fix for blended material (->reproducibility )
	* warning messages in MSTB->debug level  
	* tagged as MuonTrackingGeometry-00-05-33

2010-05-11 Felix Rauscher <rauscher@cern.ch>
	* fix checkreq warnings
	* fix compiler warnings
	* tagging MuonTrackingGeometry-00-05-32

2010-10-19 Andreas Salzburger <Andreas.Salzburger -at- cern.ch >
	* update to new CMT version
	* tagged as MuonTrackingGeometry-00-05-31

2010-01-04 Sarka Todorova <sarka.todorova@cern.ch>
	* reshuffle printout (DEBUG->VERBOSE)
	* tagged as MuonTrackingGeometry-00-05-30

2009-11-11 Sarka Todorova <sarka.todorova@cern.ch>
	* new TGC station taken into account in identification
	* tagged as MuonTrackingGeometry-00-05-29

2009-10-08 Sarka Todorova <sarka.todorova@cern.ch>
	* pass constituents info only if needed ( for blending )
        * fix span 
	* tagged as MuonTrackingGeometry-00-05-28

2009-10-05 Sarka Todorova <sarka.todorova@cern.ch>
	* simplify constituent info for DetachedTV
	* distinguish cutouts and overlaps
	* don't simplify poorly scanned shapes