@@ -662,41 +662,44 @@ void Muon::MuonStationBuilder::identifyLayers(const Trk::DetachedTrackingVolume*
     }
     
     if (tgc) {
-      int etaSt = eta - 4;
-      if (eta < 5) etaSt = eta - 5; 
-      bool* validId=new bool(false);
-      Identifier wireId  = m_tgcIdHelper->channelID(stationName.substr(0,3),etaSt,phi,1,0,1,true,validId);
-      //if (!(*validId)) ATH_MSG_ERROR( "invalid TGC channel:" << wireId );
-      //std::cout <<"wireId? valid? "<<wireId <<","<<*validId <<std::endl;
-      const HepPoint3D gp = tgc->channelPos(wireId);
-      const Trk::TrackingVolume* assocVol = station->trackingVolume()->associatedSubVolume(gp);
-      if (!assocVol) ATH_MSG_DEBUG( "wrong tgcROE?" << stationName <<"," << eta <<"," << phi );
-      if (assocVol && assocVol->confinedLayers()) {
-	const std::vector<const Trk::Layer*> layers = assocVol->confinedLayers()->arrayObjects();           
-	for (unsigned int il=0;il<layers.size();il++) {
-	  Identifier wireId  = m_tgcIdHelper->channelID(stationName.substr(0,3),etaSt,phi,il+1,0,1,true,validId);
-          if (!(*validId)) layers[il]->setLayerType(1);
-          else {
-	    //if (!(*validId)) ATH_MSG_ERROR( "invalid TGC channel:" << wireId );
-	    //std::cout <<"Id? valid? "<<wireId <<","<<*validId <<std::endl;
-	    unsigned int id = wireId.get_identifier32().get_compact();
-	    layers[il]->setLayerType(id); 
-	    // strip plane surface
-	    const Trk::PlaneSurface* stripSurf = dynamic_cast<const Trk::PlaneSurface*> (&(tgc->surface(wireId)));
-	    if ( (layers[il]->surfaceRepresentation().transform().inverse()*stripSurf->center()).mag()>0.001)   
-	      ATH_MSG_DEBUG( "TGC strip plane shifted:"<<st<<","<<eta<<","<<phi<<":" <<
-			     layers[il]->surfaceRepresentation().transform().inverse()*stripSurf->center());
+      if (phi>=m_tgcIdHelper->stationPhiMin(false) || phi>=m_tgcIdHelper->stationPhiMin(true)) {
+	int etaSt = eta - 4;
+	if (eta < 5) etaSt = eta - 5; 
+	bool* validId=new bool(false);
+	Identifier wireId  = m_tgcIdHelper->channelID(stationName.substr(0,3),etaSt,phi,1,0,1,true,validId);
+	//if (!(*validId)) ATH_MSG_ERROR( "invalid TGC channel:" << wireId );
+	//std::cout <<"wireId? valid? "<<wireId <<","<<*validId <<std::endl;
+	const HepPoint3D gp = tgc->channelPos(wireId);
+	const Trk::TrackingVolume* assocVol = station->trackingVolume()->associatedSubVolume(gp);
+	if (!assocVol) ATH_MSG_DEBUG( "wrong tgcROE?" << stationName <<"," << eta <<"," << phi );
+	if (assocVol && assocVol->confinedLayers()) {
+	  const std::vector<const Trk::Layer*> layers = assocVol->confinedLayers()->arrayObjects();           
+	  for (unsigned int il=0;il<layers.size();il++) {
+	    Identifier wireId  = m_tgcIdHelper->channelID(stationName.substr(0,3),etaSt,phi,il+1,0,1,true,validId);
+	    if (!(*validId)) layers[il]->setLayerType(1);
+	    else {
+	      //if (!(*validId)) ATH_MSG_ERROR( "invalid TGC channel:" << wireId );
+	      //std::cout <<"Id? valid? "<<wireId <<","<<*validId <<std::endl;
+	      unsigned int id = wireId.get_identifier32().get_compact();
+	      layers[il]->setLayerType(id); 
+	      // strip plane surface
+	      const Trk::PlaneSurface* stripSurf = dynamic_cast<const Trk::PlaneSurface*> (&(tgc->surface(wireId)));
+	      if ( (layers[il]->surfaceRepresentation().transform().inverse()*stripSurf->center()).mag()>0.001)   
+		ATH_MSG_DEBUG( "TGC strip plane shifted:"<<st<<","<<eta<<","<<phi<<":" <<
+			       layers[il]->surfaceRepresentation().transform().inverse()*stripSurf->center());
+	    }
+            /*
+	    Identifier s1 = m_tgcIdHelper->channelID(stationName.substr(0,3),etaSt,phi,il+1,1,1); 
+	    HepPoint3D lw1 = (layers[il]->surfaceRepresentation().transform().inverse()) * (tgc->channelPos(wireId));
+	    HepPoint3D ls1 = (layers[il]->surfaceRepresentation().transform().inverse()) * (tgc->channelPos(s1));
+            int wireRe = 1000*lw1[Trk::locY];                       
+	    layers[il]->setRef( 10e4+ls1[Trk::locX] + 10e5*(wireRe+10e6) );                      
+            */
 	  }
-          /*
-	  Identifier s1 = m_tgcIdHelper->channelID(stationName.substr(0,3),etaSt,phi,il+1,1,1); 
-	  HepPoint3D lw1 = (layers[il]->surfaceRepresentation().transform().inverse()) * (tgc->channelPos(wireId));
-	  HepPoint3D ls1 = (layers[il]->surfaceRepresentation().transform().inverse()) * (tgc->channelPos(s1));
-          int wireRe = 1000*lw1[Trk::locY];                       
-	  layers[il]->setRef( 10e4+ls1[Trk::locX] + 10e5*(wireRe+10e6) );                      
-          */
-        }
+	}
+	delete validId; 
+	validId = 0;
       }
-      delete validId;
       tgc->clearCache();
     } else {
       ATH_MSG_WARNING( name() << "tgcROE not found for :" << stationName <<","<<eta<<","<<phi );         
